corregir botones destinos

--- a/destinos.html
+++ b/destinos.html
@@ -67,6 +67,6 @@
         <p>&copy; 2025 Feria de Viajes Bilbao. Todos los derechos reservados.</p>
     </footer>
 
-    <script src="funciones.js"></script>
+    <script src="funciones/funciones.js"></script>
 </body>
 </html>
